bk_ida/gobmkida/c1/prepare_goal_list
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/prepare_goal_list/src/engine/owl.c:5631:12: error: expected expression
*( _OWORD *)( v6 + 11889308) = *( _OWORD *)&owl_goal_worm[11]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/prepare_goal_list/src/engine/owl.c:5631:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v6 + 11889308) = *( _OWORD *)&owl_goal_worm[11]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/prepare_goal_list/src/engine/owl.c:5631:43: error: expected expression
*( _OWORD *)( v6 + 11889308) = *( _OWORD *)&owl_goal_worm[11]; 
                                          ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/prepare_goal_list/src/engine/owl.c:5631:35: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v6 + 11889308) = *( _OWORD *)&owl_goal_worm[11]; 
                                  ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/prepare_goal_list/src/engine/owl.c:5632:12: error: expected expression
*( _OWORD *)( v6 + 11889296) = *( _OWORD *)&owl_goal_worm[8]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/prepare_goal_list/src/engine/owl.c:5632:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v6 + 11889296) = *( _OWORD *)&owl_goal_worm[8]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/prepare_goal_list/src/engine/owl.c:5632:43: error: expected expression
*( _OWORD *)( v6 + 11889296) = *( _OWORD *)&owl_goal_worm[8]; 
                                          ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/prepare_goal_list/src/engine/owl.c:5632:35: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v6 + 11889296) = *( _OWORD *)&owl_goal_worm[8]; 
                                  ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/prepare_goal_list/src/engine/owl.c:5633:12: error: expected expression
*( _OWORD *)( v6 + 11889280) = *( _OWORD *)&owl_goal_worm[4]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/prepare_goal_list/src/engine/owl.c:5633:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v6 + 11889280) = *( _OWORD *)&owl_goal_worm[4]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/prepare_goal_list/src/engine/owl.c:5633:43: error: expected expression
*( _OWORD *)( v6 + 11889280) = *( _OWORD *)&owl_goal_worm[4]; 
                                          ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/prepare_goal_list/src/engine/owl.c:5633:35: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v6 + 11889280) = *( _OWORD *)&owl_goal_worm[4]; 
                                  ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/prepare_goal_list/src/engine/owl.c:5634:12: error: expected expression
*( _OWORD *)&dragon_goal_worms[v6 / 0x3C][0] = *( _OWORD *)owl_goal_worm; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/prepare_goal_list/src/engine/owl.c:5634:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&dragon_goal_worms[v6 / 0x3C][0] = *( _OWORD *)owl_goal_worm; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/prepare_goal_list/src/engine/owl.c:5634:59: error: expected expression
*( _OWORD *)&dragon_goal_worms[v6 / 0x3C][0] = *( _OWORD *)owl_goal_worm; 
                                                          ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/prepare_goal_list/src/engine/owl.c:5634:51: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&dragon_goal_worms[v6 / 0x3C][0] = *( _OWORD *)owl_goal_worm; 
                                                  ^
16 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/prepare_goal_list/src/obj/1/owl.o] Error 1
